* Interface module separated
* Optimization
* Docstrings added