@@ -1,10 +1,0 @@
-# coding=utf-8
-"""Simple interface module.
-
-Simple functions are placed in a separate module
-so as not to contaminate the main program.
-
-"""
-from .interface import bye, confirm
-
-__all__ = ['bye', 'confirm']
